--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,5 +9,5 @@ jobs:
       - uses: BogDAAAMN/deta-deploy-action@v1.0.0
         with:
           deta-access-token: ${{ secrets.DETA_TOKEN }}
-          deta-name: 'micro-name' #Deta Micro name https://docs.deta.sh/docs/cli/commands/#deta-clone
-          deta-project: 'project-name' #Deta project name https://docs.deta.sh/docs/cli/commands/#deta-clone
+          deta-name: 'fastapi_auth_micro'
+          deta-project: 'default'
