--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,15 @@
+asgiref==3.4.1
+bcrypt==3.2.0
+cffi==1.14.6
+click==8.0.1
 deta==1.0.0
 ecdsa==0.17.0
 fastapi==0.66.0
+h11==0.12.0
 jose==1.0.0
 passlib==1.7.4
 pyasn1==0.4.8
+pycparser==2.20
 pydantic==1.8.2
 python-jose==3.3.0
 python-multipart==0.0.5
@@ -11,3 +17,4 @@ rsa==4.7.2
 six==1.15.0
 starlette==0.14.2
 typing-extensions==3.10.0.0
+uvicorn==0.14.0
